# Kasyno

./: CMakeLists.txt  Casino.cpp  Casino.h  ExitHelper.h  FileHandler.cpp  FileHandler.h  LICENSE  Player.cpp  Player.h  README.md  Rng.cpp  Rng.h  RoundUI.cpp  RoundUI.h  main.cpp
Games/: BlackjackGame.cpp  BlackjackGame.h  Game.h  RouletteGame.cpp  RouletteGame.h  RouletteTypes.h  SlotsGame.cpp  SlotsGame.h
Resources/: Enums.h  TextRes.h
